added meta description

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <title>Adventure Game</title>
     <meta charset="utf-8">
-    <meta description="Text based adventure game created by Tygo boons">
+    <meta description=>
+    <meta name="description" content="Text based adventure game created by Tygo boons">
     <link rel="stylesheet" href="style.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>  
