--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <title>Adventure Game</title>
     <meta charset="utf-8">
-    
+
     <meta name="description" content="Text based adventure game created by Tygo boons">
     <link rel="stylesheet" href="style.css">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>  
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script type="text/javascript" src="js/inventory.js"></script>
     <script type="text/javascript" src="js/printer.js"></script>
     <script type="text/javascript" src="js/background.js"></script>
@@ -21,16 +21,15 @@
 
 <body id="body">
 
-    <div id="text"></div>
+        <div id="text"></div>
 
-    <p id="inputfield">&#62; <input type="text" placeholder="" id="input"></p>
-    <div id="spacer" style="height: 200px;"></div>
+        <p id="inputfield">&#62; <input type="text" placeholder="" id="input"></p>
+        <div id="spacer"></div>
 </body>
 
-<script>
-
-const player = new Player();
-    player.Start();
-
-</script>
 </html>
+
+<script>
+    const player = new Player();
+    player.Start();
+</script>
